@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Custom Error Body
@@ -20,33 +21,20 @@ import java.util.Map;
 @RestControllerAdvice
 public class CustomErrorController {
 
-  @ExceptionHandler(TransactionSystemException.class)
-  ResponseEntity handleJpaViolations(TransactionSystemException exception) {
-    ResponseEntity.BodyBuilder responseEntity = ResponseEntity.badRequest();
-    if (exception.getCause().getCause() instanceof ConstraintViolationException) {
-      ConstraintViolationException violationException = (ConstraintViolationException) exception.getCause().getCause();
-
-      List errors = violationException.getConstraintViolations().stream()
-        .map(constraintViolation -> {
-          Map<String, String> errorMap = new HashMap<>();
-          errorMap.put(constraintViolation.getPropertyPath().toString(), constraintViolation.getMessage());
-          return errorMap;
-        })
-        .toList();
-      return responseEntity.body(errors);
-    }
-    return responseEntity.build();
+  @ExceptionHandler
+  ResponseEntity handleJPAViolations(TransactionSystemException exception){
+    return ResponseEntity.badRequest().build();
   }
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
-  ResponseEntity handleBindErrors(MethodArgumentNotValidException exception) {
+  ResponseEntity handleBindErrors(MethodArgumentNotValidException exception){
 
     List errorList = exception.getFieldErrors().stream()
       .map(fieldError -> {
-        Map<String, String> errorMap = new HashMap<>();
+        Map<String, String > errorMap = new HashMap<>();
         errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
         return errorMap;
-      }).toList();
+      }).collect(Collectors.toList());
 
     return ResponseEntity.badRequest().body(errorList);
   }
